--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,31 +6,43 @@
 @use "sass:color";
 
 // Colors
-$red-color: #ff3636 !default;
+$base03-color:    #002b36  !default;
+$base02-color:    #073642  !default;
+$base01-color:    #586e75  !default;
+$base00-color:    #657b83  !default;
+$base0-color:     #839496  !default;
+$base1-color:     #93a1a1  !default;
+$base2-color:     #eee8d5  !default;
+$base3-color:     #fdf6e3  !default;
+$yellow-color:    #b58900  !default;
+$orange-color:    #cb4b16  !default;
+$red-color:       #dc322f  !default;
+$magenta-color:   #d33682  !default;
+$violet-color:    #6c71c4  !default;
+$blue-color:      #268bd2  !default;
+$cyan-color:      #2aa198  !default;
+$green-color:     #859900  !default;
+
 $red-color-dark: #b71c1c !default;
-$orange-color: #f29105 !default;
-$blue-color: #0076df !default;
 $blue-color-dark: #00369f !default;
-$cyan-color: #2698ba !default;
 $light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
-$green-color: #00ab37 !default;
 $green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
-$purple-color: #b509ac !default;
+$purple-color: #6c71c4 !default;
 $light-purple-color: color.adjust($purple-color, $lightness: 25%);
 $pink-color: #f92080 !default;
-$pink-color-light: #ffdddd !default;
-$yellow-color: #efcc00 !default;
+$pink-color-light: #d33682 !default;
 
-$grey-color: #828282 !default;
+
+$grey-color: #93a1a1 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
-$grey-color-dark: #1c1c1d;
-$grey-900: #212529;
+$grey-color-dark: #073642
+$grey-900: #586e75;
 
-$white-color: #ffffff !default;
-$black-color: #000000 !default;
+$white-color: #fdf6e3 !default;
+$black-color: #002b36 !default;
 
 // Theme colors
 
