updated some files

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,7 +38,7 @@ $pink-color-light: #d33682 !default;
 
 $grey-color: #93a1a1 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
-$grey-color-dark: #073642
+$grey-color-dark: #073642;
 $grey-900: #586e75;
 
 $white-color: #fdf6e3 !default;
