--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,8 @@ li,
 span,
 strong {
   color: var(--global-text-color);
-  font-family: Ubuntu, Cantarell, sans-serif;
+  font-family: Ubuntu, sans-serif;
+  font-weight: 400;
 }
 body {
   font-family: Ubuntu;
